--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ lib*
 *.out
 pics/
 *.sh
+extracted_frames
+Sample_data
+small_set
+new_format
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
